fix positioning on tablets

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -774,6 +774,9 @@ ul.panel-body-wide {
 .ga-tooltip-wait, .metadata-popup-wait {
   #loader {
     @media (max-width: @screen-tablet) {
+      top: 2px;
+    }
+    @media (max-width: @screen-phone) {
       top: 8px;
     }
   }
